_sass/views/_landing.scss
.landing_svg {
	background: url(/assets/home-bg.svg) $bg-grey no-repeat center center;
	background-size: 800px;
	fill: #212121;
}

.landing {
	display: flex;
	align-items: center;
	justify-content: center;

	flex: 1 1 auto;

	.logo {
		display: flex;
		justify-content: center;
		img {
			width: -webkit-fill-available;
		    max-width: 500px;
		    height: 100%;
		}
	}

	.content {
		text-align: justify;
	}

	.landing__cta {
		text-align: center;
		a {
			color: $hacker-red;
		}
	}
}

